--- a/client/code.html
+++ b/client/code.html
@@ -6,395 +6,73 @@
     <title>Rover Coder - Προγραμματισμός</title>
     <script src="blockly/blockly_compressed.js"></script>
     <script src="blockly/blocks_compressed.js"></script>
+    <script src="blockly/javascript_compressed.js"></script>
     <script src="blockly/msg/js/en.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.min.js"></script>
+    <script src="js/init.js"></script>
+
+    <!--Custom blocks-->
+    <script src="rover-blocks/rover-block-definitions.js"></script>
+    <script defer src="rover-blocks/rover-block-codes.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/materialize.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body onload="loadToolbox()">
 
 <div id="blocklyDiv" style="height: 480px;"></div>
 
-<!--<xml xmlns="https://developers.google.com/blockly/xml" id="toolbox" style="display: none">-->
-<!--    <category name="Rover Coder"></category>-->
-<!--    <category name="Logic" colour="#5b80a5">-->
-<!--        <block type="controls_if"></block>-->
-<!--        <block type="logic_compare">-->
-<!--            <field name="OP">EQ</field>-->
-<!--        </block>-->
-<!--        <block type="logic_operation">-->
-<!--            <field name="OP">AND</field>-->
-<!--        </block>-->
-<!--        <block type="logic_negate"></block>-->
-<!--        <block type="logic_boolean">-->
-<!--            <field name="BOOL">TRUE</field>-->
-<!--        </block>-->
-<!--        <block type="logic_null"></block>-->
-<!--        <block type="logic_ternary"></block>-->
-<!--    </category>-->
-<!--    <category name="Loops" colour="#5ba55b">-->
-<!--        <block type="controls_repeat_ext">-->
-<!--            <value name="TIMES">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">10</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="controls_whileUntil">-->
-<!--            <field name="MODE">WHILE</field>-->
-<!--        </block>-->
-<!--        <block type="controls_for">-->
-<!--            <field name="VAR" id="0n!.?LL.{c^{5.N8kj2v">i</field>-->
-<!--            <value name="FROM">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">1</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--            <value name="TO">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">10</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--            <value name="BY">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">1</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="controls_forEach">-->
-<!--            <field name="VAR" id="Idxri4/MxPg(`,xW3oHX">j</field>-->
-<!--        </block>-->
-<!--        <block type="controls_flow_statements">-->
-<!--            <field name="FLOW">BREAK</field>-->
-<!--        </block>-->
-<!--    </category>-->
-<!--    <category name="Math" colour="#5b67a5">-->
-<!--        <block type="math_number">-->
-<!--            <field name="NUM">0</field>-->
-<!--        </block>-->
-<!--        <block type="math_arithmetic">-->
-<!--            <field name="OP">ADD</field>-->
-<!--            <value name="A">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">1</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--            <value name="B">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">1</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="math_single">-->
-<!--            <field name="OP">ROOT</field>-->
-<!--            <value name="NUM">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">9</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="math_trig">-->
-<!--            <field name="OP">SIN</field>-->
-<!--            <value name="NUM">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">45</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="math_constant">-->
-<!--            <field name="CONSTANT">PI</field>-->
-<!--        </block>-->
-<!--        <block type="math_number_property">-->
-<!--            <mutation divisor_input="false"></mutation>-->
-<!--            <field name="PROPERTY">EVEN</field>-->
-<!--            <value name="NUMBER_TO_CHECK">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">0</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="math_round">-->
-<!--            <field name="OP">ROUND</field>-->
-<!--            <value name="NUM">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">3.1</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="math_on_list">-->
-<!--            <mutation op="SUM"></mutation>-->
-<!--            <field name="OP">SUM</field>-->
-<!--        </block>-->
-<!--        <block type="math_modulo">-->
-<!--            <value name="DIVIDEND">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">64</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--            <value name="DIVISOR">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">10</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="math_constrain">-->
-<!--            <value name="VALUE">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">50</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--            <value name="LOW">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">1</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--            <value name="HIGH">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">100</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="math_random_int">-->
-<!--            <value name="FROM">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">1</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--            <value name="TO">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">100</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="math_random_float"></block>-->
-<!--    </category>-->
-<!--    <category name="Text" colour="#5ba58c">-->
-<!--        <block type="text">-->
-<!--            <field name="TEXT"></field>-->
-<!--        </block>-->
-<!--        <block type="text_join">-->
-<!--            <mutation items="2"></mutation>-->
-<!--        </block>-->
-<!--        <block type="text_append">-->
-<!--            <field name="VAR" id="/;AFMm$DSoZIDouxr6RF">item</field>-->
-<!--            <value name="TEXT">-->
-<!--                <shadow type="text">-->
-<!--                    <field name="TEXT"></field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="text_length">-->
-<!--            <value name="VALUE">-->
-<!--                <shadow type="text">-->
-<!--                    <field name="TEXT">abc</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="text_isEmpty">-->
-<!--            <value name="VALUE">-->
-<!--                <shadow type="text">-->
-<!--                    <field name="TEXT"></field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="text_indexOf">-->
-<!--            <field name="END">FIRST</field>-->
-<!--            <value name="VALUE">-->
-<!--                <block type="variables_get">-->
-<!--                    <field name="VAR" id="QO)IP!CaVeFUyuP,;?IY">text</field>-->
-<!--                </block>-->
-<!--            </value>-->
-<!--            <value name="FIND">-->
-<!--                <shadow type="text">-->
-<!--                    <field name="TEXT">abc</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="text_charAt">-->
-<!--            <mutation at="true"></mutation>-->
-<!--            <field name="WHERE">FROM_START</field>-->
-<!--            <value name="VALUE">-->
-<!--                <block type="variables_get">-->
-<!--                    <field name="VAR" id="QO)IP!CaVeFUyuP,;?IY">text</field>-->
-<!--                </block>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="text_getSubstring">-->
-<!--            <mutation at1="true" at2="true"></mutation>-->
-<!--            <field name="WHERE1">FROM_START</field>-->
-<!--            <field name="WHERE2">FROM_START</field>-->
-<!--            <value name="STRING">-->
-<!--                <block type="variables_get">-->
-<!--                    <field name="VAR" id="QO)IP!CaVeFUyuP,;?IY">text</field>-->
-<!--                </block>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="text_changeCase">-->
-<!--            <field name="CASE">UPPERCASE</field>-->
-<!--            <value name="TEXT">-->
-<!--                <shadow type="text">-->
-<!--                    <field name="TEXT">abc</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="text_trim">-->
-<!--            <field name="MODE">BOTH</field>-->
-<!--            <value name="TEXT">-->
-<!--                <shadow type="text">-->
-<!--                    <field name="TEXT">abc</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="text_print">-->
-<!--            <value name="TEXT">-->
-<!--                <shadow type="text">-->
-<!--                    <field name="TEXT">abc</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="text_prompt_ext">-->
-<!--            <mutation type="TEXT"></mutation>-->
-<!--            <field name="TYPE">TEXT</field>-->
-<!--            <value name="TEXT">-->
-<!--                <shadow type="text">-->
-<!--                    <field name="TEXT">abc</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--    </category>-->
-<!--    <category name="Lists" colour="#745ba5">-->
-<!--        <block type="lists_create_with">-->
-<!--            <mutation items="0"></mutation>-->
-<!--        </block>-->
-<!--        <block type="lists_create_with">-->
-<!--            <mutation items="3"></mutation>-->
-<!--        </block>-->
-<!--        <block type="lists_repeat">-->
-<!--            <value name="NUM">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">5</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="lists_length"></block>-->
-<!--        <block type="lists_isEmpty"></block>-->
-<!--        <block type="lists_indexOf">-->
-<!--            <field name="END">FIRST</field>-->
-<!--            <value name="VALUE">-->
-<!--                <block type="variables_get">-->
-<!--                    <field name="VAR" id="Lk)}f{%GH={JO7?L]scX">list</field>-->
-<!--                </block>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="lists_getIndex">-->
-<!--            <mutation statement="false" at="true"></mutation>-->
-<!--            <field name="MODE">GET</field>-->
-<!--            <field name="WHERE">FROM_START</field>-->
-<!--            <value name="VALUE">-->
-<!--                <block type="variables_get">-->
-<!--                    <field name="VAR" id="Lk)}f{%GH={JO7?L]scX">list</field>-->
-<!--                </block>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="lists_setIndex">-->
-<!--            <mutation at="true"></mutation>-->
-<!--            <field name="MODE">SET</field>-->
-<!--            <field name="WHERE">FROM_START</field>-->
-<!--            <value name="LIST">-->
-<!--                <block type="variables_get">-->
-<!--                    <field name="VAR" id="Lk)}f{%GH={JO7?L]scX">list</field>-->
-<!--                </block>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="lists_getSublist">-->
-<!--            <mutation at1="true" at2="true"></mutation>-->
-<!--            <field name="WHERE1">FROM_START</field>-->
-<!--            <field name="WHERE2">FROM_START</field>-->
-<!--            <value name="LIST">-->
-<!--                <block type="variables_get">-->
-<!--                    <field name="VAR" id="Lk)}f{%GH={JO7?L]scX">list</field>-->
-<!--                </block>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="lists_split">-->
-<!--            <mutation mode="SPLIT"></mutation>-->
-<!--            <field name="MODE">SPLIT</field>-->
-<!--            <value name="DELIM">-->
-<!--                <shadow type="text">-->
-<!--                    <field name="TEXT">,</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="lists_sort">-->
-<!--            <field name="TYPE">NUMERIC</field>-->
-<!--            <field name="DIRECTION">1</field>-->
-<!--        </block>-->
-<!--    </category>-->
-<!--    <category name="Colour" colour="#a5745b">-->
-<!--        <block type="colour_picker">-->
-<!--            <field name="COLOUR">#ff0000</field>-->
-<!--        </block>-->
-<!--        <block type="colour_random"></block>-->
-<!--        <block type="colour_rgb">-->
-<!--            <value name="RED">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">100</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--            <value name="GREEN">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">50</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--            <value name="BLUE">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">0</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--        <block type="colour_blend">-->
-<!--            <value name="COLOUR1">-->
-<!--                <shadow type="colour_picker">-->
-<!--                    <field name="COLOUR">#ff0000</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--            <value name="COLOUR2">-->
-<!--                <shadow type="colour_picker">-->
-<!--                    <field name="COLOUR">#3333ff</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--            <value name="RATIO">-->
-<!--                <shadow type="math_number">-->
-<!--                    <field name="NUM">0.5</field>-->
-<!--                </shadow>-->
-<!--            </value>-->
-<!--        </block>-->
-<!--    </category>-->
-<!--    <sep></sep>-->
-<!--    <category name="Variables" colour="#a55b80" custom="VARIABLE"></category>-->
-<!--    <category name="Functions" colour="#995ba5" custom="PROCEDURE"></category>-->
-<!--</xml>-->
-
-<xml xmlns="https://developers.google.com/blockly/xml" id="toolbox" style="display: none" src="rover-blocks/rover-workspace.xml"></xml>
+<div id="errorModal" class="modal center-align">
+    <div class="modal-content">
+        <h4>Error</h4>
+        <i class="material-icons large red-text">warning</i>
+        <p id="errorModalContent">No workspace found</p>
+    </div>
+    <div class="modal-footer">
+        <a href="index.html" class="modal-close waves-effect waves-red btn-flat">Go back</a>
+    </div>
+</div>
 
 <script>
 
-    //TODO - Import the toolbox using JS to avoid huge XML code in the page contents.
+    let workspace = null;
 
-    // xml = '<?xml version="1.0" encoding="utf-8"?><root><html><a href="#">the new link</a></html></root>';
-    // $xml =$($.parseXML( xml ));
-    //
-    // $('button').on('click',function(){
-    //     var content = $xml.find('html:first').htmlize();
-    //     $(content).appendTo('body');
+    /**
+     * Loads the toolbox from rover-toolbox.xml into the page.
+     */
+    function loadToolbox() {
+        fetch("rover-blocks/rover-toolbox.xml")
+            .then(response => response.text())
+            .then(data => {
+                let lines = data.split("\n");
+                lines[0] = ""; lines[lines.length-1] = "";
+                lines.join("\n");
+                console.log(lines);
+                const bodyElement = document.body;
+                let xmlElement = document.createElement("xml");
+                xmlElement.innerHTML = data;
+                bodyElement.appendChild(xmlElement);
+                workspace = initializeWorkspace();
+            })
+            .catch(error => {
+                let errorModal = M.Modal.getInstance(document.getElementById("errorModal"));
+                let errorModalContentElement = document.getElementById("errorModalContent");
+                errorModalContentElement.innerText = error;
+                errorModal.options.dismissible = false;
+                errorModal.open();
+            });
+    }
 
-    const roverWorkspace = Blockly.inject(
-        'blocklyDiv',
-        {
-            media: 'blockly/media/',
-            toolbox: document.getElementById('toolbox'),
-            zoom: {
+    function initializeWorkspace() {
+        return roverWorkspace = Blockly.inject(
+            'blocklyDiv',
+            {
+                media: 'blockly/media/',
+                toolbox: document.getElementById('toolbox'),
+                zoom: {
                     controls: true,
                     wheel: true,
                     startScale: 1.0,
@@ -402,9 +80,12 @@
                     minScale: 0.3,
                     scaleSpeed: 1.2
                 },
-            trashcan: true
-        }
-    );
+                trashcan: true
+            }
+        );
+    }
+
+
 
 </script>
 
